--- a/main.html
+++ b/main.html
@@ -2,18 +2,36 @@
 <head>
     <meta charset="UTF-8">
     <title> 최지원의 포트폴리오 </title>
+    <style>
+        .H {
+            text-align: center;
+        }
+
+        .description {
+            text-align: center;
+            color: gray;
+        }
+
+        .link_button {
+            text-align: center;
+            align-self: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
+
 <body>
     <div class="H">
         <h1> 최지원의 포트폴리오 </h1>
         <h3> 아직은 미숙하지만 성장하는 개발자입니다. <br> WIP</h3>
-        <br><br>
+        <br>
     </div>
     <div style="display:grid; grid-template-rows: 1fr 1fr 1fr">
         <p class="description">
             RAG기반으로 LLM에게 학교 관련 정보를 임베딩하여 만든<br>
             학교생활 챗봇입니다. 학점, 졸업요건, 수업 정보 등을 포함한<br>
-            각종 학교생활에 유용한 정보들을 물어볼 수 있습니다.
+            각종 학교생활에 유용한 정보들을 물어볼 수 있습니다.<br>
         </p>
         <a href="https://github.com/YoojongChoi/Rag-based-Chatbot">
             <input class="link_button" type="button" value="레포지토리로 가기">
