--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         }
 
         .link_button {
-            text-align: center;
+            display: flex;
+            justify-content: center;
             align-self: center;
             margin-left: auto;
             margin-right: auto;
